# IMCUnlock

./: CMakeLists.txt  Makefile  README.md  build_all.sh  main.c  utils.c  utils.h  zsb.img
app/: main.c
enso-installers/: README.md  enso_installer_ex.vpk
enso-installers/360-ur0/: enso360.vpk
enso-installers/360-ur0-NL/: enso360.vpk
enso-installers/360-vs0/: enso360.vpk
enso-installers/360-vs0-NL/: enso360.vpk
enso-installers/365-ur0/: enso365.vpk
enso-installers/365-ur0-NL/: enso365.vpk
enso-installers/365-vs0/: enso365.vpk
enso-installers/365-vs0-NL/: enso365.vpk
kp/: CMakeLists.txt  exports.yml  main.c
o/: 0000.img  0100.img  0300.img  1000.img  1500.img  2500.img  2800.img  pd0h.img  pr0h.img  rd0h.img  ud0h.img
p/: 0000.img  0100.img  0300.img  1000.img  1500.img  2500.img  2800.img  pd0h.img  pr0h.img  rd0h.img  ud0h.img
pc/: mbrtool.c
pd0-spoof/: README.md
plugin/: imcunlock.c  imcunlock.h  imcunlock.yml  logging.h  tai_compat.h
plugin4/: CMakeLists.txt  exports.yml  main.c
q/: 0000.img  0100.img  0300.img  1000.img  1500.img  2500.img  2800.img  pd0h.img  pr0h.img  rd0h.img  ud0h.img
sce_sys/: param.sfo
stuff/: sig
